fix(css): set word-wrap property to break-word

--- a/src/styles/chatx.css
+++ b/src/styles/chatx.css
@@ -8,6 +8,7 @@
 }
 
 .chatx-main-column {
+  word-wrap: break-word;
   height: calc(100vh - 150px);
   overflow-y: auto;
 }
